# qt-cmake

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
app/: CMakeLists.txt
app/include/: MainWindow.h
app/src/: MainWindow.cpp  main.cpp
